--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/Profile.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/Profile.html
@@ -1,4 +1,4 @@
-﻿<div class="renterProfileContent" ng-repeat="orders in userDetails.pendingOrders track by $index" ng-controller="pendingOrdersController">
+﻿<div ng-if="userDetails.pendingOrders.length > 0" class="renterProfileContent" ng-repeat="orders in userDetails.pendingOrders track by $index" ng-controller="pendingOrdersController">
     
     <h3>Pending orders from your apartments:</h3>
 
@@ -12,4 +12,7 @@
     </a>
     <button ng-click="changeOrderStatus(orders,true)">Approve</button>
     <button ng-click="changeOrderStatus(orders,false)">Decline</button>
+</div>
+<div ng-if="userDetails.pendingOrders.length <= 0">
+    <h4>No Pending Orders here for now</h4>
 </div>
