--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/ProfileParent.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/Profile/Template/ProfileParent.html
@@ -1,28 +1,11 @@
-﻿<div ng-switch="role">
-    <div ng-switch-when="0">
-        <div class="userSideBar">
-            <br />
-            <a>save spot for image<img /></a>
-            <a ui-sref="ProfileParent.EditAccount({userName:userDetails.userName})">Edit account</a>
-            <a ui-sref="ProfileParent.UserReviews({userName:userDetails.userName})">My Reviews</a>
-            <a ui-sref="ProfileParent.UserOrders({userName:userDetails.userName})">View purchses</a>
-            <a ng-if="deleteoptOn">Delete User</a>
-
-        </div>
-    </div>
-    <div ng-switch-when="1">
-        <div id="renterSideBar">
-            <br />
-            <a>save spot for image<img /></a>
-            <a ui-sref="ProfileParent.EditAccount({userName:userDetails.userName})">Edit account</a>
-            <a ui-sref="ProfileParent.UserApartments({userName:userDetails.userName})">My apartments</a>
-            <a ui-sref="ProfileParent.UserReviews({userName:userDetails.userName})">My reviews</a>
-            <a ui-sref="ProfileParent.UserOrders({userName:userDetails.userName})">View purchses</a>
-            <a ng-if="deleteoptOn">Delete renter status</a>
-            <a ng-if="deleteoptOn">Delete User</a>
-
-        </div>
-    </div>
+﻿
+<div class="w3-sidebar w3-bar-block w3-purple w3-animate-left" style="position:fixed;margin-top:62.047px;width:182.453px">
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16">save spot for image<img /></a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ui-sref="ProfileParent.EditAccount({userName:userDetails.userName})">Edit account</a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ui-sref="ProfileParent.UserReviews({userName:userDetails.userName})">My Reviews</a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ui-sref="ProfileParent.UserOrders({userName:userDetails.userName})">View purchses</a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ng-if="role === 1" ui-sref="ProfileParent.UserApartments({userName:userDetails.userName})">My apartments</a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ng-if="deleteoptOn">Delete User</a>
+    <a class="w3-bar-item w3-button w3-purple w3-cell w3-border-bottom w3-border-black w3-padding-16" ng-if="deleteoptOn&&role===1">Delete renter status</a>
 </div>
-<br /><br />
 <ui-view></ui-view>
