--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/AddApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/AddApartment.html
@@ -1,50 +1,54 @@
-﻿<div>
-    Select Apartment Category:<select ng-model="$parent.categoryID">
-        <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
-    </select>
-    <br />
+﻿<div class="w3-container w3-animate-bottom" style="margin-top:6%;margin-left:15%">
+    <h1>Add New Apartment:</h1>
+    <form class="w3-content">
+        <h6>Select Apartment Category:</h6><select style="width:30%" class="w3-select" ng-model="$parent.categoryID">
+            <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
+        </select>
+        <br />
 
-    Number Of Guests: <input placeholder="1" ng-model="$parent.numberOfGuests" type="range" min="1" max="20" />
-    <br />
+        <br />
+        <h6>Address:</h6> <input placeholder="Ex:Tel-Aviv Eiban Gavirol 30" style="width:30%" class="w3-input" ng-model="$parent.address" type="text" />
+        <br />
 
-    Address: <input ng-model="$parent.address" type="text" />
-    <br />
+        <h6>Select country:</h6><select style="width:30%" class="w3-select" ng-model="$parent.countryID" required id="countrySelect">
+            <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
+        </select>
+        <br />
+        <h6>From Date:</h6> <input style="width:30%" class="w3-input" type="date" min="{{fromDate | date:'yyyy-MM-dd'}}" ng-model="$parent.availableFromDate" />
+        <br />
 
-    Select country:<select ng-disabled="errorMessageDisplay" ng-model="$parent.countryID" required id="countrySelect">
-        <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
-    </select>
-    <br />
-    From Date: <input type="date" min="{{fromDate | date:'yyyy-MM-dd'}}" ng-model="$parent.availableFromDate" />
-    <br />
+        <h6>To Date:</h6> <input style="width:30%" class="w3-input" type="date" min="{{$parent.availableFromDate  | date:'yyyy-MM-dd'}}" ng-model="$parent.availableToDate" />
+        <br />
+        <h6>Number Of Guests:</h6> <select ng-model="$parent.numberOfGuests" class="w3-select w3-cell" style="width:30%">
+            <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
+        </select>
+        <h6>Price Per Day:</h6><input placeholder="Ex:100" style="width:30%" class="w3-input" type="number" ng-model="$parent.pricePerDay" />
+        <br />
+        <h6>Description:</h6> <textarea placeholder="Apartment Description" style="width:30%" class="w3-input w3-border" ng-model="$parent.description"></textarea>
+        <br />
 
-    To Date: <input type="date" min="{{$parent.availableFromDate  | date:'yyyy-MM-dd'}}" ng-model="$parent.availableToDate" />
-    <br />
-
-    Price Per Day<input type="number" ng-model="$parent.pricePerDay" />
-    <br />
-    Description <textarea ng-model="$parent.description"></textarea>
-    <br />
-
-    <div>
-        Shower:<input ng-model="$parent.isShower" type="checkbox" />
-        Bath:<input ng-model="$parent.isBath" type="checkbox" />
-        WIFI:<input ng-model="$parent.isWIFI" type="checkbox" />
-        TV:<input ng-model="$parent.isTV" type="checkbox" />
-        Cables:<input ng-model="$parent.isCables" type="checkbox" />
-        Satellite:<input ng-model="$parent.isSatellite" type="checkbox" />
-        Pets:<input ng-model="$parent.isPets" type="checkbox" />
-        Number of Bed Rooms<input ng-model="$parent.numberOfBedRooms" type="number" />
-        Living Room:<input ng-model="$parent.isLivingRoom" type="checkbox" />
-        BedRoom Description:<textarea ng-model="$parent.bedRoomDescription"></textarea>
-        Living Room Description:<textarea ng-model="$parent.livingRoomDescription"></textarea>
-        Queen Size Bed: <input min="0" placeholder="0" ng-model="$parent.queenSizeBed" type="number" />
-        Double Bed: <input min="0" placeholder="0" ng-model="$parent.doubleBed" type="number" />
-        Single Bed: <input min="0" placeholder="0" ng-model="$parent.singleBed" type="number" />
-        Sofa Bed: <input min="0" placeholder="0" ng-model="$parent.sofaBed" type="number" />
-        Beds Description: <textarea ng-model="$parent.bedsDescription"></textarea>
-    </div>
-    <div ng-switch="role">
-        <button ng-switch-when="0" ng-click="addApartment(true)">Add apartment and become a renter</button>
-        <button ng-switch-when="1" ng-click="addApartment()">Add new apartment</button>
-    </div>
+        <div class="w3-content">
+            Shower:<input class="w3-input w3-check w3-cell" ng-model="$parent.isShower" type="checkbox" />
+            Bath:<input class="w3-input w3-check w3-cell" ng-model="$parent.isBath" type="checkbox" />
+            WIFI:<input class="w3-input w3-check w3-cell" ng-model="$parent.isWIFI" type="checkbox" />
+            TV:<input class="w3-input w3-check w3-cell" ng-model="$parent.isTV" type="checkbox" />
+            Cables:<input class="w3-input w3-check w3-cell" ng-model="$parent.isCables" type="checkbox" />
+            Satellite:<input class="w3-input w3-check w3-cell" ng-model="$parent.isSatellite" type="checkbox" />
+            Pets:<input class="w3-input w3-check w3-cell" ng-model="$parent.isPets" type="checkbox" />
+            Living Room:<input class="w3-input w3-check w3-cell" ng-model="$parent.isLivingRoom" type="checkbox" />
+            <p class="w3-opacity">For your notice blank mean that the feature is not exist in your apartment</p>
+        </div>
+        <h6> Number of Bed Rooms:</h6><input placeholder="Ex:0" style="width:30%" class="w3-input" ng-model="$parent.numberOfBedRooms" type="number" />
+        <h6> BedRoom Description:</h6><textarea placeholder="Ex: One master bedroom and two guest rooms" style="width:30%" class="w3-input w3-border" ng-model="$parent.bedRoomDescription"></textarea>
+        <h6> Living Room Description:</h6><textarea placeholder="Ex: Very cousy living room with big screen T.V and Xbox built in, balcony just outside" style="width:30%" class="w3-input w3-border" ng-model="$parent.livingRoomDescription"></textarea>
+        <h6> Queen Size Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="Ex:0" ng-model="$parent.queenSizeBed" type="number" />
+        <h6> Double Bed: </h6><input style="width:30%" class="w3-input" min="0" placeholder="Ex:0" ng-model="$parent.doubleBed" type="number" />
+        <h6> Single Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="Ex:0" ng-model="$parent.singleBed" type="number" />
+        <h6> Sofa Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="Ex:0" ng-model="$parent.sofaBed" type="number" />
+        <h6> Beds Description:</h6> <textarea placeholder="Ex:Two queen size beds with orginal egyption bedclothes " style="width:30%" class="w3-input w3-border" ng-model="$parent.bedsDescription"></textarea>
+        <div ng-switch="role">
+            <button ng-switch-when="0" ng-click="addApartment(true)">Add apartment and become a renter</button>
+            <button ng-switch-when="1" ng-click="addApartment()">Add new apartment</button>
+        </div>
+    </form>
 </div>
