--- a/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/EditApartment.html
+++ b/Apartrent_Try2/Apartrent_Try2/wwwroot/UserProfile/RenterFeatures/Template/EditApartment.html
@@ -1,46 +1,52 @@
-﻿<div>
-    Select New Apartment Category:<select ng-model="$parent.editCategoryID">
-        <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
-    </select>
-    <br />
+﻿<div class="w3-container w3-animate-bottom" style="margin-top:6%;margin-left:15%">
+<h1>Edit Apartment:</h1>
+    <form class="w3-content">
+        <h6>Apartment Category:</h6><select style="width:30%" class="w3-select" ng-model="$parent.editCategoryID">
+            <option ng-repeat="category in categories" ng-value="category.categoryID">{{category.apartmentType}}</option>
+        </select>
+        <br />
+        <h6>Address:</h6> <input style="width:30%" class="w3-input" placeholder="{{$parent.userDetails.currentApartment.address}}" ng-model="$parent.editAddress" type="text" />
+        <br />
+        <h6>Select country:</h6><select style="width:30%" class="w3-select" ng-model="$parent.editCountryID">
+            <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
+        </select>
+        <br />
+        <h6>From Date:</h6> <input style="width:30%" class="w3-input" type="date" ng-model="$parent.editFromDate" />
+        <br />
 
-    Number Of Guests: <input placeholder="{{$parent.userDetails.currentApartment.numberOfGuests}}" ng-model="$parent.editNumberOfGuests" type="range" min="1" max="20" />
-    <br />
+        <h6>To Date:</h6> <input style="width:30%" class="w3-input" type="date" min="{{editFromDate| date:'yyyy-MM-dd'}}" ng-model="$parent.editToDate" />
+        <br />
 
-    Address: <input placeholder="{{$parent.userDetails.currentApartment.address}}" ng-model="$parent.editAddress" type="text" />
-    <br />
-    Select country:<select ng-model="$parent.editCountryID">
-        <option ng-repeat="country in countries track by $index" ng-value="country.countryID">{{country.countryName}}</option>
-    </select>
-    <br />
-    From Date: <input type="date" ng-model="$parent.editFromDate" />
-    <br />
-
-    To Date: <input type="date" min="{{editFromDate| date:'yyyy-MM-dd'}}" ng-model="$parent.editToDate" />
-    <br />
-
-    Price Per Day<input type="number" placeholder="{{$parent.userDetails.currentApartment.pricePerDay}}" ng-model="$parent.editPricePerDay" />
-    <br />
-    Description <textarea placeholder="{{$parent.userDetails.currentApartment.description}}" ng-model="$parent.editDescription"></textarea>
-    <br />
-    <input type="checkbox" ng-model="$parent.showFeatures" /> Advance Edit
-    <div ng-show="showFeatures">
-        Shower:<input ng-model="$parent.editIsShower" type="checkbox" ng-checked="$parent.userDetails.currentApartment.shower" />
-        Bath:<input ng-model="$parent.editIsBath" type="checkbox" ng-checked="$parent.userDetails.currentApartment.bath" />
-        WIFI:<input ng-model="$parent.editIsWIFI" type="checkbox" ng-checked="$parent.userDetails.currentApartment.wifi" />
-        TV:<input ng-model="$parent.editIsTV" type="checkbox" ng-checked="$parent.userDetails.currentApartment.tv" />
-        Cables:<input ng-model="$parent.editIsCables" type="checkbox" ng-checked="$parent.userDetails.currentApartment.cables" />
-        Satellite:<input ng-model="$parent.editIsSatellite" type="checkbox" ng-checked="$parent.userDetails.currentApartment.satellite" />
-        Pets:<input ng-model="$parent.editIsPets" type="checkbox" ng-checked="$parent.userDetails.currentApartment.pets" />
-        Number of Bed Rooms<input placeholder="{{$parent.userDetails.currentApartment.numberOfBedRooms}}" ng-model="$parent.editNumberOfBedRooms" type="number" />
-        Living Room:<input ng-model="$parent.editIsLivingRoom" ng-checked="$parent.userDetails.currentApartment.livingRoom" type="checkbox" />
-        BedRoom Description:<textarea placeholder="{{$parent.userDetails.currentApartment.bedRoomDescription}}" ng-model="$parent.editBedRoomDescription"></textarea>
-        Living Room Description:<textarea placeholder="{{$parent.userDetails.currentApartment.livingRoomDescription}}" ng-model="$parent.editLivingRoomDescription"></textarea>
-        Queen Size Bed: <input min="0" placeholder="{{$parent.userDetails.currentApartment.queenSizeBed}}" ng-model="$parent.editQueenSizeBed" type="number" />
-        Double Bed: <input min="0" placeholder="{{$parent.userDetails.currentApartment.doubleBed}}" ng-model="$parent.editDoubleBed" type="number" />
-        Single Bed: <input min="0" placeholder="{{$parent.userDetails.currentApartment.singleBed}}" ng-model="$parent.editSingleBed" type="number" />
-        Sofa Bed: <input min="0" placeholder="{{$parent.userDetails.currentApartment.sofaBed}}" ng-model="$parent.editSofaBed" type="number" />
-        Beds Description: <textarea placeholder="{{$parent.userDetails.currentApartment.bedsDescription}}" ng-model="$parent.editBedsDescription"></textarea>
-    </div>
-    <a ng-click="editApartment()" ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">Save</a>
+        <h6>Price Per Day:</h6><input style="width:30%" class="w3-input" type="number" placeholder="{{$parent.userDetails.currentApartment.pricePerDay}}" ng-model="$parent.editPricePerDay" />
+        <br />
+        <h6>Number Of Guests</h6> <select ng-model="searchGuests" class="w3-select w3-cell" style="width:30%">
+            <option ng-repeat="n in [].constructor(20) track by $index" ng-value="$index+1">{{$index+1}}</option>
+        </select>
+        <br />
+        <h6>Description:</h6> <textarea style="width:30%" class="w3-input w3-border" placeholder="{{$parent.userDetails.currentApartment.description}}" ng-model="$parent.editDescription"></textarea>
+        <br />
+        <h5>Advance Edit:  <input type="checkbox" class="w3-check w3-round" ng-model="$parent.showFeatures" /></h5><br />
+        <div class="w3-content" ng-show="showFeatures">
+            <div class="w3-cell-row">
+                Shower:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsShower" type="checkbox" ng-checked="$parent.userDetails.currentApartment.shower" />
+                Bath:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsBath" type="checkbox" ng-checked="$parent.userDetails.currentApartment.bath" />
+                WIFI:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsWIFI" type="checkbox" ng-checked="$parent.userDetails.currentApartment.wifi" />
+                TV:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsTV" type="checkbox" ng-checked="$parent.userDetails.currentApartment.tv" />
+                Cables:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsCables" type="checkbox" ng-checked="$parent.userDetails.currentApartment.cables" />
+                Satellite:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsSatellite" type="checkbox" ng-checked="$parent.userDetails.currentApartment.satellite" />
+                Pets:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsPets" type="checkbox" ng-checked="$parent.userDetails.currentApartment.pets" />
+                Living Room:<input class="w3-input w3-check w3-cell" ng-model="$parent.editIsLivingRoom" ng-checked="$parent.userDetails.currentApartment.livingRoom" type="checkbox" />
+            </div><br />
+            <h6>Number of Bed Rooms: </h6><input style="width:30%" class="w3-input" placeholder="{{$parent.userDetails.currentApartment.numberOfBedRooms}}" ng-model="$parent.editNumberOfBedRooms" type="number" />
+            <h6>BedRoom Description:</h6><textarea style="width:30%" class="w3-input w3-border" placeholder="{{$parent.userDetails.currentApartment.bedRoomDescription}}" ng-model="$parent.editBedRoomDescription"></textarea>
+            <h6>Living Room Description:</h6><textarea style="width:30%" class="w3-input w3-border" placeholder="{{$parent.userDetails.currentApartment.livingRoomDescription}}" ng-model="$parent.editLivingRoomDescription"></textarea>
+            <h6>Queen Size Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="{{$parent.userDetails.currentApartment.queenSizeBed}}" ng-model="$parent.editQueenSizeBed" type="number" />
+            <h6>Double Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="{{$parent.userDetails.currentApartment.doubleBed}}" ng-model="$parent.editDoubleBed" type="number" />
+            <h6>Single Bed: </h6><input style="width:30%" class="w3-input" min="0" placeholder="{{$parent.userDetails.currentApartment.singleBed}}" ng-model="$parent.editSingleBed" type="number" />
+            <h6>Sofa Bed:</h6> <input style="width:30%" class="w3-input" min="0" placeholder="{{$parent.userDetails.currentApartment.sofaBed}}" ng-model="$parent.editSofaBed" type="number" />
+            <h6>Beds Description:</h6> <textarea style="width:30%" class="w3-input w3-border" placeholder="{{$parent.userDetails.currentApartment.bedsDescription}}" ng-model="$parent.editBedsDescription"></textarea>
+        </div>
+        <br />
+        <a class="w3-button w3-purple w3-round w3-hover-blue" ng-click="editApartment()" ng-href="yourProfile/{{userDetails.userName}}/userApartments.html">Save</a>
+    </form>
 </div>
